tests/snapshots/examples_fixtures/type_system__failing__71_hm_if_known_type_compile_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/71_hm_if_known_type_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `expect_int`.

  examples/type_system/failing/71_hm_if_known_type_compile_mismatch.flx:44:32
   |
34 | fn expect_int(x: Int) -> Int {
   | ---------------------------- `expect_int` expects `Int` as the 1st parameter
35 |     x
36 | }
... |
42 |         "right"
43 |     }
44 |     print(to_string(expect_int(picked)))
   |                                ^^^^^^
   |                                ------ this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
== stdout ==
<not executed>
